# mistral-vibe-rc

./: .gitignore  AGENTS.md  Dockerfile  README.md  justfile  main.py  mise.toml  package.json  pnpm-lock.yaml  pyproject.toml  vitest.config.ts
.agents/skills/hf-cli/: SKILL.md
.vibe/skills/: hf-cli
apps/mobile/: .env.example  app.json  metro.config.js  package.json
apps/mobile/app/: _layout.tsx  modal.tsx
apps/mobile/app/(tabs)/: _layout.tsx  explore.tsx  index.tsx  (+1 more)
apps/mobile/components/: connection-status.tsx  permission-modal.tsx  settings-sidebar.tsx  sidebar.tsx
apps/mobile/constants/: theme.ts
apps/mobile/contexts/: permission-context.tsx
apps/mobile/hooks/: api-client.ts  config.ts  reconnecting-socket.ts  use-agent.ts  use-audio-playback.ts  use-audio-socket.ts  use-control-socket.ts  use-permissions.ts  use-websocket.ts
apps/mobile/scripts/: gen_dev_token.py
apps/mobile/src/: App.tsx  global.css
apps/server/: package.json
apps/server-cli/: package.json
apps/server/src/: index.ts
apps/web/: index.html  package.json
apps/web/src/: main.tsx
docs/: CLIENT_TASKS.md  lechat-design-system.html
python/: acp_client.py  audio_processor.py  intent_classifier.py  list_models.py  main.py  microphone_client.py  mistral_agent.py  pyproject.toml  repo_manager.py  schemas.py  session_manager.py  strands_agent.py  test_ws.py  tts_service.py  tts_utils.py  vibe_agent.py  vibe_executor.py
tests/: manual_e2e_test.py  manual_interrupt_test.py  manual_mic_test.py  manual_tts_test.py  test_audio_processor.py  test_session_manager.py  test_ws_audio.py
(+17 files in other folders)
